Fixed navbar overlapping

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -17,7 +17,6 @@
 
 .navbar {
   width: 70%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
